update(database): update application.yml connection with database.

--- a/pom.xml
+++ b/pom.xml
@@ -146,7 +146,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>me.lucasgusmao.financeai/me.lucasgusmao.financeai.HelloApplication</mainClass>
+                            <mainClass>me.lucasgusmao.financeai/me.lucasgusmao.financeai.FinanceApplication</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
